<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="LoanBalance">Loan Balance:</string>
    <string name="Loanno">Loan No:</string>
    <string name="Nationalid">National ID:</string>
    <string name="Username">Agent Code:</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="accountname">Acc. Name:</string>
    <string name="accountno">Acc. No:</string>
    <string name="action_changepin">Change Password</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Amount:</string>
    <string name="app_name">AGENCY</string>
    <string name="error_account_invalid">This Account No is not valid</string>
    <string name="error_code_invalid">This Code is incorrect</string>
    <string name="error_confirmation_error">Pin Confirmation error</string>
    <string name="error_current_pin_incorrect">Current pin entered is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_pin_invalid">This pin is incorrect</string>
    <string name="error_same_account">Transfer To Same Account is not allowed</string>
    <string name="error_tel_tooshort">Telephone No Entered is too short</string>
    <string name="hello_world">Hello world!</string>
    <string name="host_name">Host</string>
    <string name="loansource">Source:</string>
    <string name="loantype">Loan Type:</string>
    <string name="pref_default_display_name">Null</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Agent Code</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="society">Society:</string>
    <string name="societyno">Member No:</string>
    <string name="telephone">Tel. No:</string>
    <string name="title_activity_balance">Balance</string>
    <string name="title_activity_confirmation_box">Client Confirmation</string>
    <string name="title_activity_loanrepayment">Loanrepayment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_transfers">Transfers</string>
    <string name="title_activity_withdrawal">Withdrawal</string>
    <string name="title_agency_detail">Agency Detail</string>
    <string name="title_agency_list">AGENCY</string>
</resources>
