<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
            <TextView android:id="@id/NationalId" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Nationalid" />
            <EditText android:id="@id/txtnationalid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/Nationalid" android:layout_weight="1.0" android:inputType="textAutoComplete" />
        </TableRow>
        <RelativeLayout android:layout_marginTop="10.0dip">
            <TextView android:textColor="@android:color/holo_green_dark" android:id="@id/accountinfo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Account Info" />
            <ProgressBar android:id="@id/paccdetails" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="25.0dip" android:layout_alignParentRight="true" android:layout_alignParentEnd="true" />
        </RelativeLayout>
        <View android:background="@android:color/holo_green_dark" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <TextView android:id="@id/AccountNo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accountno" />
            <TextView android:textColor="@android:color/holo_green_dark" android:id="@id/txtaccountno" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/accountno" android:layout_weight="1.0" />
            <ProgressBar android:layout_gravity="right" android:id="@id/paccno" android:visibility="gone" android:layout_height="25.0dip" />
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <TextView android:id="@id/TvAccountName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/accountname" />
            <TextView android:textColor="@android:color/holo_green_dark" android:id="@id/txtaccountname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/accountname" android:layout_weight="1.0" />
            <ProgressBar android:layout_gravity="right" android:id="@id/paccname" android:visibility="gone" android:layout_height="25.0dip" />
        </TableRow>
        <View android:background="@android:color/holo_green_dark" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="20.0dip" />
        <LinearLayout android:gravity="right" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
            <Button android:id="@id/Cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="50.0dip" android:text="Cancel" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
            <Button android:id="@id/Confirm" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Confirm" android:layout_toLeftOf="@id/Cancel" android:layout_alignParentTop="true" android:layout_toStartOf="@id/Cancel" />
        </LinearLayout>
    </TableLayout>
</ScrollView>